add render list in movies after pressing BACK button

--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -17,7 +17,7 @@ ul {
   margin: 0px;
 }
 
-// .link {
-//   text-decoration: none;
-//   display: block;
-// }
+a {
+  text-decoration: none;
+  display: block;
+}
