--- a/src/pages/Pages.module.scss
+++ b/src/pages/Pages.module.scss
@@ -15,33 +15,6 @@
   max-width: 450px;
 }
 
-.MovieImgThumb {
-  margin-top: 5px;
-  margin-bottom: 10px;
-  margin-left: auto;
-  margin-right: auto;
-  height: 300px;
-  width: 300px;
-}
-
-.MovieImgThumb > img {
-  display: block;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  object-position: top;
-}
-
-.MovieCardItem {
-  display: block;
-  margin: 5px 0px;
-  text-align: center;
-}
-
-.MovieCardOverview {
-  margin-bottom: 5px;
-}
-
 .MovieCardInfoCont {
   margin-top: 10px;
   margin-bottom: 5px;
@@ -49,4 +22,8 @@
 
 .MovieCardInfo_Item:not(last-child) {
   margin-bottom: 5px;
+}
+
+.MovieBtnBack {
+  margin-top: 10px;
 }
